get ready for publishing to pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "spotify-library-builder"
 version = "0.1.0"
 authors = [
-  { name = "Your Name", email = "you@example.com" }
+  { name = "Trey Good", website = "https://treyr.me" }
 ]
 description = "CLI tool that builds a local MP3 library from a Spotify playlist by fetching YouTube videos and converting them to MP3."
 readme = "README.md"
@@ -25,7 +25,7 @@ classifiers = [
 ]
 
 [project.urls]
-"Source" = "https://github.com/yourname/SpotifyLibraryBuilder"
+"Source" = "https://github.com/lrudolph333/SpotifyLibraryBuilder"
 
 [project.scripts]
 sp-lib-builder = "spotify_library_builder.cli:main"
